NPE fixed